--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="[2.1.1,3.0)" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.1.9" />
-    <PackageReference Include="Nexus.Link.Services.Contracts" Version="1.5.1" />
+    <PackageReference Include="Nexus.Link.Services.Contracts" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -30,6 +30,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.0.2 Bump
       2.0.1 Conditional injection of IEventReceiver service.
       2.0.0 Updated REST endpoints.
       1.12.5 Missing call to overridden method.
