--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="[2.1.1,3.0)" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.1.11" />
-    <PackageReference Include="Nexus.Link.Services.Contracts" Version="3.0.0" />
+    <PackageReference Include="Nexus.Link.Services.Contracts" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>3.0.5</Version>
+    <Version>3.0.6</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -30,6 +30,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.0.6 Bump
       3.0.5 Verify the event before sending it to the event delegate.
       3.0.4 Catch exceptions from event delegates.
       3.0.3 Perhaps a breaking signature change.
