--- a/test/IdentityAccessManagement.Sdk.UnitTest/IdentityAccessManagement.Sdk.UnitTest.csproj
+++ b/test/IdentityAccessManagement.Sdk.UnitTest/IdentityAccessManagement.Sdk.UnitTest.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.18" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.18" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
