--- a/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
+++ b/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
-    <AssemblyName>Nexus.Link.BusinessEvents.Sdk</AssemblyName>
-    <RootNamespace>Nexus.Link.BusinessEvents.Sdk</RootNamespace>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -16,37 +14,37 @@
     <IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.18.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+    <PackageReference Include="IdentityModel" Version="5.1.0" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.5.2" />
   </ItemGroup>
 
   <PropertyGroup>
-    <PackageId>Nexus.Link.BusinessEvents.Sdk</PackageId>
-    <Version>3.1.2</Version>
+    <PackageId>Nexus.Link.IdentityAccessManagement.Sdk</PackageId>
+    <Version>0.1.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageTags>nexus;link;fulcrum;lever</PackageTags>
+    <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
     <PackageProjectUrl>https://github.com/nexus-link/Nexus.Link.Sdks</PackageProjectUrl>
     <PackageLanguage>en-US</PackageLanguage>
-    <Description>SDK for Nexus business events service.</Description>
-    <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
+    <Description>Authentication library to support features in the Nexus Link concept</Description>
+    <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      3.1.2 Symbols
-      3.1.1 Bump
-      3.1.0 Added RegisterSubscriptions
-      3.0.0 Added CancellationToken where missing for async methods.
-      2.0.25 Bump
-      2.0.17 Fix: PackageProjectUrl for this nuget package
-      2.0.16 Bump
-      2.0.0 Support refactored Authentication
-      1.0.19 Bumped nexus nugets
-      1.0.7 Bumped version, consolidating versions
-      1.0.6 Bumped version, verifying new yaml and build.
-      1.0.5 Updated dependencies
-      1.0.0 First release
+      0.1.0 Initial release
     </PackageReleaseNotes>
   </PropertyGroup>
 
