--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -19,13 +19,19 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.0.1" />
+    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.1" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.6.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.19.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.28.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WorkflowEngine.Sdk.Persistence.Abstract\WorkflowEngine.Sdk.Persistence.Abstract.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
   <PropertyGroup>
