--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -22,8 +22,8 @@
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.1" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.6.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.19.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.28.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.20.0-beta02" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.0-beta01" />
   </ItemGroup>
 
   <ItemGroup>
