--- a/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
+++ b/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.20.0-beta04" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.20.0" />
   </ItemGroup>
 
   <PropertyGroup>
