--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -19,12 +19,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.0.3-beta13" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.0.3-rc01" />
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.1" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.6.1" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.20.0-beta04" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.0-beta03" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.20.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.0" />
   </ItemGroup>
 
   <ItemGroup>
