--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.5.2" />
+    <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.6.0" />
     <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.9.3" />
   </ItemGroup>
 
@@ -44,7 +44,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>1.0.1-beta01</Version>
+    <Version>1.0.1-rc01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -54,7 +54,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-	    1.0.0 First release
+      1.0.1 Bugfixes
+      1.0.0 First release
     </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
